--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ backcall==0.2.0
 bleach==3.3.0
 cffi==1.14.5
 colorama==0.4.4
+cycler==0.10.0
 debugpy==1.3.0
 decorator==5.0.9
 defusedxml==0.7.1
@@ -23,7 +24,9 @@ jupyter-console==6.4.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
 MarkupSafe==2.0.1
+matplotlib==3.4.2
 matplotlib-inline==0.1.2
 mistune==0.8.4
 nbclient==0.5.3
